--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <div class="header">a</div>
         <div class="content">a</div>
-        <div class="footer">a</div>
+        <div class="footer">Copyright @ The Odin Project 2021</div>
     </body>
 </html>
