--- a/index.html
+++ b/index.html
@@ -7,8 +7,36 @@
         <link href="./css/stylesheet.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="header">a</div>
-        <div class="content">a</div>
+        <div class="header">
+            <div class="header-logo">
+                <span>
+                    Header Logo
+                </span>
+
+                <Ul>
+                    <li><a>header link one</a></li>
+                    <li><a>header link two</a></li>
+                    <li><a>header link three</a></li>
+                </Ul>
+            </div>
+
+            <div class="hero">
+                <div class="hero-left">
+                    <div class="hero-text">This website is awesome!</div>
+                    <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</div>
+                    <button>Sign Up</button>
+                </div>
+
+                <div class="image"><img src="" alt="This is placeholder for image"></div>
+            </div>
+        </div>
+
+        <div class="content">a
+
+
+
+        </div>
+
         <div class="footer">Copyright @ The Odin Project 2021</div>
     </body>
 </html>
