--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="./css/stylesheet.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="header">
+        <div id="header">
             <div class="header-logo">
                 <span>
                     Header Logo
@@ -31,12 +31,52 @@
             </div>
         </div>
 
-        <div class="content">a
+        <div id="content">
+            <div id="content-top">
+                <div>
+                    <div id="content-header-text"><strong>Some random information</strong></div>
+                </div>
 
+                <div id="content-subheader">
+                    <div class="illustration">
+                        <img src="" alt="place holder for image">
+                        <span>This is some subtext under an illustration or image</span>
+                    </div>
+                    <div class="illustration">
+                        <img src="" alt="place holder for image">
+                        <span>This is some subtext under an illustration or image</span>
+                    </div>
+                    <div class="illustration">
+                        <img src="" alt="place holder for image">
+                        <span>This is some subtext under an illustration or image</span>
+                    </div>
+                    <div class="illustration">
+                        <img src="" alt="place holder for image">
+                        <span>This is some subtext under an illustration or image</span>
+                    </div>
+                </div>
+            </div>
 
+            <div id="content-middle">
+                <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. 
+                    Maybe It's just filling up space, or maybe people will actually read it. Who knows? 
+                    All I know is that it looks nice.</em>
+                </div>
+                <div class="quote-reference">- Thor, God of Thunder</div>
+            </div>
+
+            <div class="content-bottom">
+                <div class="call-to-action-left">
+                    <div class="call-to-action-left-top">Call to action! It's time!</div>
+                    <div class="call-to-action-left-bottom">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="call-to-action-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
 
         </div>
 
-        <div class="footer">Copyright @ The Odin Project 2021</div>
+        <div id="footer">Copyright @ The Odin Project 2021</div>
     </body>
 </html>
